--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "test:unit": "vue-cli-service test:unit --watch"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/vue-fontawesome": "^2.0.2",
     "@vue/cli-plugin-unit-jest": "^4.5.8",
     "@vue/test-utils": "^1.1.1",
     "axios": "^0.21.0",
